--- a/mayan/apps/appearance/templates/appearance/partials/form_title.html
+++ b/mayan/apps/appearance/templates/appearance/partials/form_title.html
@@ -17,7 +17,7 @@
             <h3 id="content-title" title='{{ result.title_full }}'>
 {% endif %}
 
-                {{ result.title }}
+                <span id="appearance-title-text">{{ result.title }}</span>
 
 {% if not non_html_title and result.title %}
             </h3>
