--- a/mayan/apps/dynamic_search/templates/dynamic_search/app/list_toolbar.html
+++ b/mayan/apps/dynamic_search/templates/dynamic_search/app/list_toolbar.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-{% if search_model %}
+{% if not search_disable_list_filtering and search_model %}
     <div class="pull-left">
         <div class="btn-toolbar" role="toolbar">
             <form action="" id="search-form-filter" method="get" role="search">
