--- a/mayan/apps/platform/templates/platform/docker/dockerfile.tmpl
+++ b/mayan/apps/platform/templates/platform/docker/dockerfile.tmpl
@@ -30,6 +30,7 @@ apt-get update \
 && apt-get install --no-install-recommends --yes \
     ca-certificates \
     exiftool \
+    file \
     fonts-arphic-uming \
     fonts-arphic-ukai \
     fonts-unfonts-core \
