Convert staging folder file select to select2
Convert the staging folder file selection input to a Select2
widget supporting text filtering.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/sources/templates/sources/app/foot.html
+++ b/mayan/apps/sources/templates/sources/app/foot.html
@@ -71,8 +71,9 @@
     });
 
     $('body').on('click', '.sources-staging_folder-select', function (event) {
-        const $this = $(this);
-        $('#id_source-staging_folder_file_id').val($this.data('encoded_filename'));
+        const $stagingFolderFileID = $('#id_source-staging_folder_file_id');
+        $stagingFolderFileID.val($(this).data('encoded_filename'));
+        $stagingFolderFileID.trigger('change');
         event.preventDefault();
     });
 </script>
