Fix list filtering caching
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/dynamic_search/templates/dynamic_search/app/list_toolbar.html
+++ b/mayan/apps/dynamic_search/templates/dynamic_search/app/list_toolbar.html
@@ -1,5 +1,7 @@
 {% load i18n %}
 
+{# appearance_app_template_nocache #}
+
 {% if not search_disable_list_filtering and search_model %}
     <div class="pull-left">
         <div class="btn-toolbar" role="toolbar">
