--- a/mayan/apps/platform/templates/platform/docker/dockerfile.tmpl
+++ b/mayan/apps/platform/templates/platform/docker/dockerfile.tmpl
@@ -41,17 +41,19 @@ apt-get update \
     gnupg1 \
     graphviz \
     libarchive-zip-perl \
-    libreoffice-calc-nogui \
-    libreoffice-draw-nogui \
-    libreoffice-impress-nogui \
-    libreoffice-math-nogui \
-    libreoffice-writer-nogui \
+    libcairo2 \
+    libffi-dev \
     libfile-mimeinfo-perl \
     libfuse2 \
     libldap-2.4-2 \
     libmagic1 \
     libmariadb3 \
     libpq5 \
+    libreoffice-calc-nogui \
+    libreoffice-draw-nogui \
+    libreoffice-impress-nogui \
+    libreoffice-math-nogui \
+    libreoffice-writer-nogui \
     libsasl2-2 \
     poppler-utils \
     python3-distutils \
