--- a/mayan/apps/platform/templates/platform/gitlab-ci.tmpl
+++ b/mayan/apps/platform/templates/platform/gitlab-ci.tmpl
@@ -313,13 +313,13 @@ job_postgres_upgrade_test:
     - apt-get install --yes libpq-dev
     - pip install psycopg2==$PYTHON_PSYCOPG2_VERSION_PREVIOUS
     - export MAYAN_DATABASES="{'default':{'ENGINE':'django.db.backends.postgresql','NAME':'{{ DEFAULT_DATABASE_NAME }}','PASSWORD':'{{ DEFAULT_DATABASE_PASSWORD }}','USER':'{{ DEFAULT_DATABASE_USER }}','HOST':'postgres'}}"
-    - mayan-edms.py initialsetup --no-dependencies
+    - mayan-edms.py common_initial_setup --no-dependencies
     - echo "from mayan.apps.documents.models import DocumentType;from mayan.apps.documents.tests.literals import TEST_SMALL_DOCUMENT_PATH;DocumentType.objects.first().new_document(file_object=open(file=TEST_SMALL_DOCUMENT_PATH, mode='rb'))" | mayan-edms.py shell
     - pip install --requirement requirements/build.txt --requirement requirements/testing-base.txt
     - pip install psycopg2==$PYTHON_PSYCOPG2_VERSION
     - make python-wheel
     - pip install dist/mayan_edms-*.whl
-    - mayan-edms.py performupgrade --no-dependencies
+    - mayan-edms.py common_perform_upgrade --no-dependencies
   services:
     - {{ DOCKER_POSTGRES_IMAGE_VERSION }}
   tags:
@@ -332,12 +332,12 @@ job_postgres_upgrade_test:
 job_sqlite_upgrade_test:
   <<: *job_base_upgrade_test
   script:
-    - mayan-edms.py initialsetup --no-dependencies
+    - mayan-edms.py common_initial_setup --no-dependencies
     - echo "from mayan.apps.documents.models import DocumentType;from mayan.apps.documents.tests.literals import TEST_SMALL_DOCUMENT_PATH;DocumentType.objects.first().new_document(file_object=open(file=TEST_SMALL_DOCUMENT_PATH, mode='rb'))" | mayan-edms.py shell
     - pip install --requirement requirements/build.txt --requirement requirements/testing-base.txt
     - make python-wheel
     - pip install dist/mayan_edms-*.whl
-    - mayan-edms.py performupgrade --no-dependencies
+    - mayan-edms.py common_perform_upgrade --no-dependencies
 
 # Run the test suit
 
