--- a/mayan/apps/appearance/templates/appearance/base_plain.html
+++ b/mayan/apps/appearance/templates/appearance/base_plain.html
@@ -9,42 +9,54 @@
 {% spaceless %}
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-    <head>
-        <meta content="width=device-width, initial-scale=1, maximum-scale=5" name="viewport">
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta http-equiv="Content-Language" content="{{ LANGUAGE_CODE }}" />
-        <title>
-            {% block base_title %}
-                {% block title %}{% endblock %} :: {% block project_name %}    {% smart_setting 'COMMON_PROJECT_TITLE' as setting_project_title %}{% endblock %}
-            {% endblock base_title %}
-        </title>
 
-        <link href="{% static 'appearance/node_modules/@fortawesome/fontawesome-free/css/all.min.css' %}" media="screen" rel="stylesheet" type="text/css" />
-        <link href="{% static 'appearance/node_modules/bootswatch/flatly/bootstrap.min.css' %}" media="screen" rel="stylesheet" type="text/css" />
-        <link href="{% static 'appearance/css/base.css' %}" media="screen" rel="stylesheet" type="text/css" />
-        {% block stylesheets %}{% endblock %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Mayan page a free and open-source software">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=5" name="viewport">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Language" content="{{ LANGUAGE_CODE }}" />
+    <title>
+        {% block base_title %}
+        {% block title %}{% endblock %} :: {% block project_name %} {% smart_setting 'COMMON_PROJECT_TITLE' as
+        setting_project_title %}{% endblock %}
+        {% endblock base_title %}
+    </title>
 
-        <style>
-            {% appearance_get_user_theme_stylesheet user=request.user %}
-        </style>
+    <link href="{% static 'appearance/node_modules/@fortawesome/fontawesome-free/css/all.min.css' %}" media="screen"
+        rel="stylesheet" type="text/css" />
+    <link href="{% static 'appearance/node_modules/bootswatch/flatly/bootstrap.min.css' %}" media="screen"
+        rel="stylesheet" type="text/css" />
+    <link href="{% static 'appearance/css/base.css' %}" media="screen" rel="stylesheet" type="text/css" />
+    {% block stylesheets %}{% endblock %}
 
-        <script>
-            // Detect if we are inside of an AJAX content container
-            // and break free as this is supposed to be a top level
-            // template.
-            var currentHash = window.location.hash;
-            if (currentHash.length) {
-                var uri = new URI(window.location);
-                var uriFragment = uri.fragment();
-                window.location = uriFragment;
-            }
-        </script>
-    </head>
-    <body id="body-plain">
-        {% block content_plain %}{% endblock %}
-        <script src="{% static 'appearance/node_modules/jquery/dist/jquery.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'appearance/node_modules/bootstrap/dist/js/bootstrap.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'appearance/node_modules/@fortawesome/fontawesome-free/js/all.min.js' %}" data-auto-replace-svg="nest" type="text/javascript"></script>
-    </body>
+    <style>
+        {
+            % appearance_get_user_theme_stylesheet user=request.user %
+        }
+    </style>
+
+    <script>
+        // Detect if we are inside of an AJAX content container
+        // and break free as this is supposed to be a top level
+        // template.
+        var currentHash = window.location.hash;
+        if (currentHash.length) {
+            var uri = new URI(window.location);
+            var uriFragment = uri.fragment();
+            window.location = uriFragment;
+        }
+    </script>
+</head>
+
+<body id="body-plain">
+    {% block content_plain %}{% endblock %}
+    <script src="{% static 'appearance/node_modules/jquery/dist/jquery.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'appearance/node_modules/bootstrap/dist/js/bootstrap.min.js' %}"
+        type="text/javascript"></script>
+    <script src="{% static 'appearance/node_modules/@fortawesome/fontawesome-free/js/all.min.js' %}"
+        data-auto-replace-svg="nest" type="text/javascript"></script>
+</body>
+
 </html>
 {% endspaceless %}
