--- a/mayan/apps/appearance/templates/appearance/menu_topbar.html
+++ b/mayan/apps/appearance/templates/appearance/menu_topbar.html
@@ -13,7 +13,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url home_view %}">{% smart_setting 'COMMON_PROJECT_TITLE' %}</a>
+                <a class="navbar-brand" aria-label="topbar" href="{% url home_view %}">{% smart_setting 'COMMON_PROJECT_TITLE' %}</a>
             </div>
 
             <div id="navbar" class="navbar-collapse collapse">
