--- a/mayan/apps/appearance/templates/appearance/root.html
+++ b/mayan/apps/appearance/templates/appearance/root.html
@@ -11,6 +11,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 
 <head>
+    <meta name="description" content="Mayan page a free and open-source software">
     <meta content="width=device-width, initial-scale=1, maximum-scale=5" name="viewport">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Language" content="{{ LANGUAGE_CODE }}" />
